# TagMo

app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  amiibo.c  drbg.c  main.h  util.c
app/src/main/res/drawable/: nfc_bar.xml  nfc_circle.xml
gradle/wrapper/: gradle-wrapper.properties
